--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
     <div id="webchat"></div>
   </div>
 
+
+
   <!-- JS Scripts -->
   <script>
     function toggleSidebar() {
@@ -166,4 +168,4 @@
   </script>
 
 </body>
-</html
+</html>
