--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
     <div id="webchat"></div>
   </div>
 
+ <!-- html question codes-->
+ <div id="custom-quick-replies">
+  <p>Here are some tasty ideas to try:</p>
+  <button onclick="sendQuickReply('What’s for dinner?')">What’s for dinner?</button>
+  <button onclick="sendQuickReply('Give me a healthy snack idea')">Give me a healthy snack idea</button>
+  <button onclick="sendQuickReply('What can I cook with eggs and rice?')">What can I cook with eggs and rice?</button>
+</div>
 
 
   <!-- JS Scripts -->
